Add a search endpoint in example
